# RayWaypoints

./: CMakeLists.txt  main.c  makefile  readme.md
include/: game.h
include/common/: types.h
src/: game.c
